# Poster

./: .gitignore  README.md  app  cli  composer.json  docker-compose.yaml  experiment  forecast  makefile  pyproject.toml  requirements.txt  script.sh  test_feed.php
app/Builder/: DiscordRichPresenceForecastProcessor.php
app/Config/: Config.php
app/Constants/: Constants.php
app/DataTypes/: Article.php  Feed.php  Forecast.php  Weather.php
app/Fetcher/: FeedFetcher.php
app/Interface/: DiscordRPGeneratorInterface.php  DiscordRichPresenceBuilderInterface.php  FetcherInterface.php  ParserInterface.php  PosterInterface.php  RequestInterface.php
app/Request/: Request.php
app/Utils/: ForecastProcess.php
app/Writer/: Writer.php
app/data/: Article.php  Feed.php  FeedStatus.php  Forecast.php  Telop.php  TelopImageUsed.php  Weather.php
backend/: composer.json
backend/setup/: create_table.sql
backend/src/: Config.php  Constants.php  Flags.php  Forcast.php  Forecast.php
backend/tests/: testingrss.php
docker/: Dockerfile
feed/: create_table.sql  feed.php
setup/: create_table.sql
src/: app.php  capture.py  default.json  feed.php  forecast.php  nhk.py  run.php  run.py  setting.py  telop.py  test_run.py  webhook.py
src/Builder/: ForecastRichPresenceBuilder.php  RichPresenceBuilderTemplate.php
src/Config/: Config.php
src/DB/: InstanceManager.php  PlaceManager.php  WebHookManager.php
src/DataTypes/: FeedStatus.php  Telop.php  TelopImageUsed.php  Weather.php
src/DateTypes/: Weather.php
src/FeedExtractor/: AtomFeedExtractor.php  (+2 more)
tools/: script.sh
(+163 files in other folders)
